fixed 3 . method showAddHistoryForm into RepairHistoryControllerTwo